# supernotes-client

./: Cargo.toml  LICENSE  README.md  card.md
.github/workflows/: ci.yml  clippy.yml  release.yml  security.yml
src/: main.rs
tests/: integration_tests.rs
