cargo-features = ["strip"]

[package]
name = "supernotes-client"
version = "0.1.0"
description = "Supernotes command line utility"
authors = ["Joost Cassee <joost@cassee.net>"]
repository = "https://github.com/jcassee/supernotes-client"
categories = ["command-line-utilities"]
keywords = ["notes", "supernotes"]
license = "MIT"
edition = "2018"
exclude = [
    ".gitignore",
    ".github",
]

[[bin]]
name = "sn"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
debug = false
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1"
markdown = "0.3"
oauth2 = "4.0.0-alpha.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1"
structopt = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "1"
mockito = "0.29"
